--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <div class="mainContent">
         <h2>Minh Tâm</h2>
     </div>
+    <div class="wrapper">
+        <div class="box-area">
+            <div class="box1"></div>
+            <div class="box2"></div>
+            <div class="box3"></div>
+            <div class="box4"></div>
+            <div class="box5"></div>
+            <div class="box6"></div>
+        </div>
+    </div>
 </body>
 
 </html>
